Fix classnames by css convention, fix about-img-container alignment

--- a/src/components/style/About.css
+++ b/src/components/style/About.css
@@ -5,17 +5,19 @@
     grid-template-columns: 1fr 1fr;
     justify-content: center;
     gap: 1rem;
-    width: 50vw;
-    border: solid antiquewhite 1px;
-    border-radius: 10px;
+    width: 100vw;
 }
 .about-main-container h1{
     grid-column: 1/ 3;
     grid-row: 1/ 2 ;
     border-bottom: solid antiquewhite 1px;
 }
-.about-img-container{
+.about-content-div{
     display: flex;
     flex-direction: column;
-    align-items: baseline;
+    justify-content: center;
+}
+#about-img-container{
+    width: 50%;
+    align-items: center;
 }
