--- a/src/components/style/ProfileImg.css
+++ b/src/components/style/ProfileImg.css
@@ -1,4 +1,4 @@
-.profileImg{
+.profile-image{
     display: flex;
     width: 12vw;
     mim-width: 10vw;
