--- a/src/components/style/imgContainer.css
+++ b/src/components/style/imgContainer.css
@@ -1,4 +1,4 @@
-.imgContainer{
+.about-img-container{
     height: fit-content;
     width: 100%;
     display: flexbox;
